[package]
name = "epserde-derive"
authors = [
	"Tommaso Fontana <tommaso.fontana.96@gmail.com>",
	"Valentin Lorentz <vlorentz@softwareheritage.org>",
	"Sebastiano Vigna <sebastiano.vigna@unimi.it>",
]
description = "Procedural macros for ε-serde"
version = "0.10.2"
edition = "2024"
repository = "https://github.com/vigna/epserde-rs/"
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
keywords = ["serialization", "zero-copy", "mmap"]
rust-version = "1.85"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
