[package]
name = "epserde-trait"
version = "0.1.0"
edition = "2021"
description = "Traits for epserde, an ε-copy serialization framework"
repository = "https://github.com/vigna/epserde-rs/"
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
keywords = ["serialization", "zero-copy", "ε-copy"]
authors = ["Tommaso Fontana <tommaso.fontana.96@gmail.com>", "Sebastiano Vigna <sebastiano.vigna@unimi.it>"]

[dependencies]
mmap-rs = {version="0.5.0", optional=true}
bitflags = {version="2.3.1", default-features=false}
bytemuck = "1.13.1"
lazy_static = {version="1.4.0", features=["spin_no_std"]}

[features]
default = ["std", "mmap-rs"]
std = ["alloc"]
alloc = []
